# wc-interface-issue

./: Cargo.toml  README.md  interface.widl  manifest.yaml  wapc.yaml
src/: generated.rs  lib.rs
